--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends 'base.html' %}
 <!-- prettier-ignore -->
 {% load static %}
 <!-- prettier-ignore -->
@@ -7,63 +7,68 @@
 {% block content %}
 <div class="container-fluid">
   <!-- Header -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
-        <img
-          src="{% static 'images/logos/png/logo-no-background.png' %}"
-          alt="Logo"
-          width="30"
-          height="30"
-          class="d-inline-block align-text-top"
-        />
-        JustDO
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Tasks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+  {% include 'profile_navigation.html' %}
 
   <!-- Task List -->
-  <section>
+  <section class="mt-4" style="max-width: 800px">
     <div class="row">
       <div class="col-md-8">
-        <h2>Task List</h2>
-        <!-- Add your task list content here -->
+        <div class="card">
+          <div class="card-body">
+            <h2 class="text-primary fs-7 fw-bold text-center">Tasks</h2>
+            {% if tasks %}
+            <ul class="list-group dropdown">
+              {% for task in tasks %}
+              <li class="list-group-item d-flex justify-content-between align-items-center dropdown-toggle" data-mdb-toggle="dropdown"><span><input type="checkbox"></span>{{ task.title }} <span>Due Date: {{ task.due_date }}</span>
+                <div class="dropdown-menu">
+                  <div class="dropdown-item">
+                    <p>{{ task.description }}</p>
+                  </div>
+                </div>
+                <div class="tasks-control">
+                  <a href="#"><i class="bi bi-pen"></i></a>
+                  <a href="#"><i class="bi bi-trash"></i></a>
+                </div>
+              </li>
+              {% endfor %}
+              {% else %}
+              <li class="list-group-item">No tasks yet.</li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="col-md-4">
         <h2>Task Details</h2>
-        <!-- Add your task details content here -->
+        {% for task in tasks %}
+        {{ task.description }}
+        {% endfor %}
       </div>
     </div>
   </section>
 
   <!-- Task Creation -->
   <section>
-    <h2>Create Task</h2>
-    <!-- Add your task creation form here -->
+    <h2 class="text-primary fs-7 fw-bold text-center">Create Task</h2>
+    <div class="card">
+      <div class="card-body">
+        <form method="post" novalidate class="w-100 d-flex flex-md-column">
+          {% csrf_token %}
+          {% for field in form %}
+          {{ field.label}}
+          {{ field }}
+          {% if field.errors %}
+          <strong class="error">{{ field.errors|striptags }}</strong>
+          {% endif %}
+          {% endfor %}
+
+          <div>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="{% url 'tasks' %}" class="btn btn-danger">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </div>
   </section>
 
   <!-- Task Filtering and Sorting -->
