--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends 'base.html' %}
 <!-- prettier-ignore -->
 {% load static %}
 <!--prettier-ignore-->
@@ -8,7 +8,8 @@
 
 <div class="container-fluid vh-100 overflow-hidden" style="background-color: #0088ff">
   <div class="mt-4">
-    <header class="container d-flex justify-content-center align-items-center mb-auto">
+    {% include 'users/_navigation.html' %}
+    <!-- <header class="container d-flex justify-content-center align-items-center mb-auto">
       <div>
         <a href="#">
           <img
@@ -31,10 +32,10 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
   </div>
   <div class="row d-flex justify-content-center">
-    <div class="col-sm .col-md col-lg primary text-white p-5">
+    <div class="col-sm col-md col-lg primary text-white p-5">
       <div class="d-flex flex-sm-column flex-md-column flex-column align-items-center justify-content-center mt-3">
         <div class="mt-3 p-3" style="max-width: 42em">
           <h2 class="display-4 mb-4 fs-7 fw-bold text-bold text-left">
@@ -46,16 +47,12 @@
             a shopping list with a partner or managing multiple work projects, JustDO is here to help you tick off all
             your personal and professional to-dos.
           </p>
-          <a href="#pills-register" id="get-started-btn" class="btn btn-light btn-lg mt-4" style="color: #0088ff"
-            >Get Started</a
-          >
+          <a href="#pills-register" id="get-started-btn" class="btn btn-light btn-lg mt-4" style="color: #0088ff">Get Started</a>
         </div>
         <div class="d-flex justify-content-center align-items-center m-5 p-3">
           <h6 class="mx-3 mt-2">Contact Us:</h6>
           <a href="#" class="text-white text-decoration-none text-center mx-4"><i class="bi bi-twitter"></i>Twitter</a>
-          <a href="#" class="text-white text-decoration-none text-center mx-4"
-            ><i class="bi bi-linkedin"></i>LinkedIn</a
-          >
+          <a href="#" class="text-white text-decoration-none text-center mx-4"><i class="bi bi-linkedin"></i>LinkedIn</a>
           <a href="#" class="text-white text-decoration-none text-center mx-4"><i class="bi bi-envelope"></i>Email</a>
           <a href="#" class="text-white text-decoration-none text-center mx-4"><i class="bi bi-github"></i>Github</a>
         </div>
