--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends 'base.html' %}
 <!-- prettier-ignore -->
 {% load static %}
 <!-- prettier-ignore -->
@@ -6,86 +6,71 @@
 <!-- prettier-ignore -->
 {% block content %}
 <!-- Navigation -->
-<div class="container-sm-fluid container-md-fluid container-fluid mt-auto mb-0">
-  <header class="container d-flex align-items-center mb-auto">
-    <div>
-      <a href="#">
-        <img src="{% static 'images/logos/png/logo-no-background.png' %}" alt="logo-white" style="width: 100px; height: auto" />
-      </a>
-    </div>
-    <div class="ms-auto">
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a href="#" id="index-login-btn" class="nav-link px-2" style="color: #0088ff">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" id="index-login-btn" class="nav-link px-2" style="color: #0088ff">Features</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" id="index-register-btn" class="nav-link px-2" style="color: #0088ff">Login</a>
-        </li>
-      </ul>
-    </div>
-  </header>
+<div class="container-fluid mt-auto mb-0">
+  {% include 'base_nav.html' %}
 </div>
-<div class="container-sm-fluid container-md-fluid container-fluid d-flex flex-md-column justify-content-center align-items-center flex-column py-3" style="min-height: 95vh">
-  <!-- Login Container -->
-  <div>
-    <div class="card" style="max-width: 600px">
-      <div class="card-body">
-        <form method="POST">
-          {% csrf_token %}
-          <!-- <div class="text-center mb-3">
-        <p>Sign in with:</p>
+<div class="container-fluid py-3" style="min-height: 95vh">
+  <div class="row d-flex justify-content-center align-items-center">
+    <!-- Login Background image -->
+    <div class="col-md-6">
+      <img src="{% static 'images/resources/backgrounds/login-image.png' %}" class="w-100 h-auto" alt="login background">
+      <a href="https://lovepik.com/images/png-internet-security.html" class="text-decoration-none">Internet Security Png vectors by Lovepik.com</a>
+    </div>
 
-        <button type="button" class="btn btn-secondary btn-floating mx-1">
-          <i class="bi bi-google"></i>
-        </button>
-      </div>
-
-      <p class="text-center">or:</p> -->
-          <h5 class="card-title text-primary text-center">Login</h5>
-
-          <!-- Email input -->
-          <div class="form-outline mb-4">
-            {{ form.username }}
-            <!-- <input type="email" name="username_or_email" id="loginName" class="form-control" /> -->
-            <label class="form-label" for="loginName">Username</label>
-          </div>
-
-          <!-- Password input -->
-          <div class="form-outline mb-4">
-            {{ form.password }}
-            <!-- <input type="password" name="password" id="loginPassword" class="form-control" /> -->
-            <label class="form-label" for="loginPassword">Password</label>
-          </div>
-
-          <!-- 2 column grid layout -->
-          <div class="row mb-4">
-            <div class="col-md-6 d-flex justify-content-center">
-              <!-- Checkbox -->
-              <div class="form-check mb-3 mb-md-0">
-                <input class="form-check-input" type="checkbox" value="" id="loginCheck" />
-                <label class="form-check-label" for="loginCheck"> Remember me </label>
+    <!-- Login Container -->
+    <div class="col-md-6 d-flex justify-content-center align-items-center">
+      <div class="card" style="max-width: 500px">
+        <div class="card-body">
+          <form method="POST">
+            {% csrf_token %}
+            <h5 class="card-title text-primary text-center">Login</h5>
+            <!-- Email input -->
+            <div class="col-md-6 form-outline mb-4">
+              <div class="form-group postion-relative">
+                <label class="form-label" for="firstName">Username <span class="text-danger">*</span></label>
+                {{ form.username }}
               </div>
             </div>
-
-            <div class="col-md-6 d-flex justify-content-center">
-              <!-- Simple link -->
-              <a href="#!">Forgot password?</a>
+            {% if form.username.errors %}
+            {% for error in form.username.errors %}
+            <div class="alert alert-danger">
+              <strong>{{ error|escape }}</strong>
             </div>
-          </div>
+            {% endfor %}
+            {% endif %}
 
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-4 w-100">Sign in</button>
-
-          <!-- Register buttons -->
-          <div class="text-center">
-            <p>Not a member? <a href="{% url 'register' %}" id="register-link">Register</a></p>
-          </div>
-        </form>
+            <!-- Password input -->
+            <div class="col-md-6 form-outline mb-4">
+              <div class="form-group postion-relative">
+                <label class="form-label" for="password">Password <span class="text-danger">*</span></label>
+                {{ form.password }}
+              </div>
+            </div>
+            {% if form.password.errors %}
+            {% for error in form.password.errors %}
+            <div class="alert alert-danger">
+              <strong>{{ error|escape }}</strong>
+            </div>
+            {% endfor %}
+            {% endif %}
+            <!-- 2 column grid layout -->
+            <div class="row mb-4">
+              <div class="col-md-6 d-flex justify-content-center">
+                <!-- Password Reset link -->
+                <a href="{% url 'password-reset' %}">Forgot password?</a>
+              </div>
+            </div>
+            <!-- Submit button -->
+            <button type="submit" class="_btn _btn-primary btn-block mb-4 text-white">Sign in</button>
+            <!-- Register buttons -->
+            <div class="text-center">
+              <p>Not a member? <a href="{% url 'register' %}" id="register-link">Register</a></p>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
+
   </div>
 </div>
 
