Fix update and delet bugs

--- a/tasks/templates/tasks/task_confirm_delete.html
+++ b/tasks/templates/tasks/task_confirm_delete.html
@@ -13,7 +13,7 @@
     <h2>Delete Task</h2>
     <p>Are you sure that you want to delete "{{task}}"?</p>
     <p class="d-flex justify-content-between">
-      <input type="submit" class="btn btn-primary" value="Delete">
+      <input type="submit" class="_btn _btn-primary" value="Delete">
       <button href="{% url 'tasks'%}" class="btn btn-outline">Cancel</button>
     </p>
   </form>
