--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -37,3 +37,10 @@ body {
   background-color: #f8f9fa;
   border-color: #f8f9fa;
 }
+
+/* style a button like it is the bootstrap class btn-danger */
+._btn-danger {
+  color: #ffffff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
