--- a/tasks/templates/tasks/task_form.html
+++ b/tasks/templates/tasks/task_form.html
@@ -22,8 +22,8 @@
         {% endfor %}
 
         <div class="d-flex justify-content-between align-items-center mt-4">
-          <button type="submit" class="btn btn-primary">Save</button>
-          <a href="{% url 'tasks' %}" class="btn btn-danger">Cancel</a>
+          <button type="submit" class="_btn _btn-primary">Save</button>
+          <a href="{% url 'tasks' %}" class="_btn btn-danger">Cancel</a>
         </div>
       </form>
     </div>
