--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -7,47 +7,220 @@
 {% if user.is_authenticated %}
 {% include 'profile_navigation.html' %}
 {% endif %}
-<section>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="text-primary fs-7 fw-bold text-center">Here are your tasks</h5>
-      {% if tasks %}
-      <table class="table align-middle mb-0 bg-light">
-        <thead class="bg-light">
-          <tr>
-            <th></th>
-            <th>Task</th>
-            <th>Status</th>
-            <th>Priority</th>
-            <th>Due Date</th>
-            <th>Days Remaining</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for task in tasks %}
-          <tr>
-            <td><input type="checkbox"></td>
-            <td>{{ task.title }}</td>
-            <td>{% if task.status == "P" %}<span class="badge rounded-pill d-inline bg-primary">Pending</span>{% elif task.status == "C" %}<span class="badge rounded-pill d-inline bg-success">Completed</span>{% else %}<span class="badge rounded-pill d-inline bg-warning">In Progress</span>{% endif %}</td>
-            <td>{% if task.priority == "H" %}<span class="badge rounded-pill d-inline bg-danger">High</span>{% elif task.priority == "M" %}<span class="badge rounded-pill d-inline bg-warning">Medium</span>{% else %}<span class="badge rounded-pill d-inline bg-primary">Low</span>{% endif %}</td>
-            <td>{{ task.due_date }}</td>
-            <td>{{ task.days_until_due }}</td>
-            <td>
-              <div class="tasks-control">
-                <a href="{% url 'update-task' task.id %}"><i class="bi bi-pen"></i></a>
-                <a href="{% url 'delete-task' task.id %}"><i class="bi bi-trash"></i></a>
+<div class="container-fluid">
+  <div class="row">
+    <!-- Tasks Table  -->
+    <div class="col-md-8">
+      <section>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="text-primary fs-7 fw-bold text-center">Here are your tasks</h5>
+            {% if tasks %}
+            <table class="table align-middle mb-0 bg-light">
+              <thead class="bg-light">
+                <tr>
+                  <th></th>
+                  <th>Task</th>
+                  <th>Status</th>
+                  <th>Priority</th>
+                  <th>Due Date</th>
+                  <th>Days Remaining</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for task in tasks %}
+                <tr>
+                  <td><input type="checkbox"></td>
+                  <td>{{ task.title }}</td>
+                  <td>{% if task.status == "P" %}<span class="badge rounded-pill d-inline bg-primary">Not Started</span>{% elif task.status == "C" %}<span class="badge rounded-pill d-inline bg-success">Completed</span>{% else %}<span class="badge rounded-pill d-inline bg-warning">In Progress</span>{% endif %}</td>
+                  <td>{% if task.priority == "H" %}<span class="badge rounded-pill d-inline bg-danger">High</span>{% elif task.priority == "M" %}<span class="badge rounded-pill d-inline bg-warning">Medium</span>{% else %}<span class="badge rounded-pill d-inline bg-primary">Low</span>{% endif %}</td>
+                  <td>{{ task.due_date|date:"F d, Y" }}</td>
+                  <td>{{ task.days_until_due }}</td>
+                  <td>
+                    <div class="tasks-control">
+                      <button type="button" class="_btn _btn-primary btn-floating btn-lg" data-mdb-toggle="modal" data-mdb-target="#update-task-modal-{{ task.id }}">
+                        <i class="bi bi-pen-fill pe-none"></i>
+                      </button>
+                      <button class="_btn" type="button" data-mdb-toggle="modal" data-mdb-target="#delete-task-modal-{{ task.id }}"><i class="bi bi-trash-fill pe-none"></i></button>
+                    </div>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+            {% else %}
+            <p class="text-center">You have no tasks yet <a href="{% url 'create-task' %}" class="text-primary">create</a> one or view your dashboard</p>
+            {% endif %}
+          </div>
+        </div>
+
+      </section>
+    </div>
+    <!-- Create Task Form -->
+    <div class="col-md-4">
+      <section>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="text-primary card-title text-center">Create a task</h4>
+            <form method="POST" action="{% url 'create-task' %}">
+              {% csrf_token %}
+              <!-- Title -->
+              <div class="form-group mb-4">
+                <label for="title{{ task.id }}">Title:</label>
+                <input type="text" class="form-control" id="title{{ task.id }}" name="title" value="{{ task.title }}">
               </div>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% else %}
-      <p class="text-center">You have no tasks yet <a href="{% url 'create-task' %}" class="text-primary">create</a> one or view your dashboard</p>
-      {% endif %}
+              <!-- Description -->
+              <div class="form-group mb-4">
+                <label for="description{{ task.id }}">Description:</label>
+                <textarea class="form-control" id="description{{ task.id }}" name="description">{{ task.description }}</textarea>
+              </div>
+              <!-- Due Date -->
+              <div class="form-group mb-4">
+                <label for="due_date{{ task.id }}">Due Date:</label>
+                <input type="date" class="form-control" id="due_date{{ task.id }}" name="due_date" value="{{ task.due_date }}">
+              </div>
+              <!-- Status -->
+              <div class="form-group mb-4">
+                <label for="status{{ task.id }}">Status:</label>
+                {{ form.status }}
+              </div>
+              <!-- Priority -->
+              <div class="form-group mb-4">
+                <label for="priority{{ task.id }}">Priority:</label>
+                {{ form.priority }}
+              </div>
+              {% if form.errors or form.non_field_errors %}
+              <div class="mb-3 p-6 bg-danger text-white">
+                {% for field in form %}
+                {{ field.errors }}
+                {% endfor %}
+                {{ form.non_field_errors }}
+              </div>
+              {% endif %}
+              <!-- Submit button -->
+              <button type="submit" class="_btn _btn-primary">Create Task</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
-</section>
+</div>
+
+{% for task in tasks %}
+<!-- Modal for updating task -->
+<div class="modal fade" id="update-task-modal-{{ task.id }}" tabindex="-1" aria-labelledby="UpdateModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-primary text-center" id="UpdateModalLabel">Update Task</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{% url 'update-task' task.id %}">
+          {% csrf_token %}
+          <!-- Title -->
+          <div class="form-group mb-4">
+            <label for="title{{ task.id }}">Title:</label>
+            <input type="text" class="form-control" id="title{{ task.id }}" name="title" value="{{ task.title }}">
+          </div>
+
+          <!-- Description -->
+          <div class="form-group mb-4">
+            <label for="description{{ task.id }}">Description:</label>
+            <textarea class="form-control" id="description{{ task.id }}" name="description">{{ task.description }}</textarea>
+          </div>
+
+          <!-- Due Date -->
+          <div class="form-group mb-4">
+            <label for="due_date{{ task.id }}">Due Date:</label>
+            <input type="date" class="form-control" id="due_date{{ task.id }}" name="due_date" value="{{ task.due_date|date:'Y-m-d' }}">
+          </div>
+
+          <!-- Status -->
+          <div class="form-group mb-4">
+            <label for="status{{ task.id }}">Status:</label>
+            <select class="form-control" id="status{{ task.id }}" name="status">
+              {% if task.status == "P" %}
+              <option value="P" selected>Not Started</option>
+              <option value="C">Completed</option>
+              <option value="IP">In Progress</option>
+              {% elif task.status == "C" %}
+              <option value="P">Not Started</option>
+              <option value="C" selected>Completed</option>
+              <option value="IP">In Progress</option>
+              {% elif task.status == "IP" %}
+              <option value="P">Not Started</option>
+              <option value="C">Completed</option>
+              <option value="IP" selected>In Progress</option>
+              {% endif %}
+            </select>
+          </div>
+
+          <!-- Priority -->
+          <div class="form-group mb-4">
+            <label for="priority{{ task.id }}">Priority:</label>
+            <select class="form-control" id="priority{{ task.id }}" name="priority">
+              {% if task.priority == "H" %}
+              <option value="H" selected>High</option>
+              <option value="M">Medium</option>
+              <option value="L">Low</option>
+              {% elif task.priority == "M" %}
+              <option value="H">High</option>
+              <option value="M" selected>Medium</option>
+              <option value="L">Low</option>
+              {% elif task.priority == "L" %}
+              <option value="H">High</option>
+              <option value="M">Medium</option>
+              <option value="L" selected>Low</option>
+              {% endif %}
+            </select>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="_btn btn-secondary" data-mdb-dismiss="modal">
+              Close
+            </button>
+            <button type="submit" class="_btn _btn-primary">Save changes</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Modal for deleting tasks -->
+<div class="modal" id="delete-task-modal-{{ task.id }}" tabindex=" -1" aria-labelledby="DeleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-primary text-center" id="DeletModalLabel">Delete Task</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="close"></button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{% url 'delete-task' task.id %}">
+          {% csrf_token %}
+          <p>
+            Are you sure you want to delete this task? <br>
+          <div class="text-primary fw-bold mt-4 text-center"> {{ task.title }}</div>
+          </p>
+          <div class="modal-footer">
+            <button type="button" class="_btn btn-secondary" data-mdb-dismiss="modal">
+              Cancel
+            </button>
+            <button type="submit" class="_btn _btn-danger">Delete</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+</div>
+{% endfor %}
+
+
+
+
 
 {% endblock %}
