--- a/templates/profile_navigation.html
+++ b/templates/profile_navigation.html
@@ -18,7 +18,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link mx-3" href="#" style="color: #ffffff">Dashboard</a>
+          <a class="nav-link mx-3" href="{% url 'dashboard' %}" style="color: #ffffff">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-3" href="{% url 'tasks' %}" style="color: #ffffff">Tasks</a>
@@ -67,7 +67,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link mx-3" href="#" style="color: #0088ff">Dashboard</a>
+          <a class="nav-link mx-3" href="{% url 'dashboard' %}" style="color: #0088ff">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-3" href="{% url 'tasks' %}" style="color: #0088ff">Tasks</a>
@@ -86,13 +86,10 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
           <li>
-            <a class="dropdown-item" href="#">My profile</a>
+            <a class="dropdown-item" href="{% url 'tasks' %}">My Tasks</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Settings</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
           </li>
         </ul>
       </div>
