--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -31,7 +31,7 @@
               <tbody>
                 {% for task in tasks %}
                 <tr>
-                  <td><input type="checkbox"></td>
+                  <td><input type="checkbox" value="{{ task.id }}" id="task_{{ task.id }}" onchange="markTaskCompleted(this)"></td>
                   <td>{{ task.title }}</td>
                   <td>{% if task.status == "P" %}<span class="badge rounded-pill d-inline bg-primary">Not Started</span>{% elif task.status == "C" %}<span class="badge rounded-pill d-inline bg-success">Completed</span>{% else %}<span class="badge rounded-pill d-inline bg-warning">In Progress</span>{% endif %}</td>
                   <td>{% if task.priority == "H" %}<span class="badge rounded-pill d-inline bg-danger">High</span>{% elif task.priority == "M" %}<span class="badge rounded-pill d-inline bg-warning">Medium</span>{% else %}<span class="badge rounded-pill d-inline bg-primary">Low</span>{% endif %}</td>
@@ -219,7 +219,31 @@
 </div>
 {% endfor %}
 
+<script>
+  function markTaskCompleted(checkbox) {
+    var taskId = checkbox.value;
+    var csrfToken = '{{ csrf_token }}';
 
+    if (checkbox.checked) {
+      $.ajax({
+        url: '/tasks/mark-completed/' + taskId + '/',
+        type: 'POST',
+        data: { csrfmiddlewaretoken: csrfToken },
+        success: function () {
+          console.log('Task marked as completed');
+          // You can perform additional actions here if needed
+        },
+        error: function (error) {
+          console.log('Error marking task as completed', error);
+          // Handle the error if necessary
+          checkbox.checked = false; // Uncheck the checkbox if an error occurs
+        }
+      });
+    } else {
+      // Handle the case when the checkbox is unchecked if needed
+    }
+  }
+</script>
 
 
 
