--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -157,7 +157,7 @@
             {% endif %}
 
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-3">Register</button>
+            <button type="submit" class="_btn _btn-primary btn-block mb-3">Register</button>
           </form>
         </div>
       </div>
