--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -44,3 +44,8 @@ body {
   background-color: #dc3545;
   border-color: #dc3545;
 }
+.task-item.is_completed {
+  text-decoration: line-through;
+  display: none;
+  opacity: 0.6;
+}
