Update contact info

--- a/templates/index_carousel.html
+++ b/templates/index_carousel.html
@@ -61,10 +61,10 @@
             </div>
             <div class="d-flex justify-content-center align-items-center m-5 p-3">
               <h6 class="mx-3 mt-2">Contact Us:</h6>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-twitter"></i>Twitter</a>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-linkedin"></i>LinkedIn</a>
+              <a href="https://twitter.com/ThatBlaq" class="text-decoration-none text-center mx-4"><i class="bi bi-twitter"></i>Twitter</a>
+              <a href="https://www.linkedin.com/christian-koranteng" class="text-decoration-none text-center mx-4"><i class="bi bi-linkedin"></i>LinkedIn</a>
               <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-envelope"></i>Email</a>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-github"></i>Github</a>
+              <a href="https://github.com/kkfergie22" class="text-decoration-none text-center mx-4"><i class="bi bi-github"></i>Github</a>
             </div>
           </div>
         </div>
@@ -86,10 +86,10 @@
             </div>
             <div class="d-flex justify-content-center align-items-center m-5 p-3">
               <h6 class="mx-3 mt-2">Contact Us:</h6>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-twitter"></i>Twitter</a>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-linkedin"></i>LinkedIn</a>
+              <a href="https://twitter.com/ThatBlaq" class="text-decoration-none text-center mx-4"><i class="bi bi-twitter"></i>Twitter</a>
+              <a href="https://www.linkedin.com/christian-koranteng" class="text-decoration-none text-center mx-4"><i class="bi bi-linkedin"></i>LinkedIn</a>
               <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-envelope"></i>Email</a>
-              <a href="#" class="text-decoration-none text-center mx-4"><i class="bi bi-github"></i>Github</a>
+              <a href="https://github.com/kkfergie22" class="text-decoration-none text-center mx-4"><i class="bi bi-github"></i>Github</a>
             </div>
           </div>
         </div>
