--- a/templates/base_nav.html
+++ b/templates/base_nav.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% if request.path == "/" %}
-<header class="container d-flex justify-content-center align-items-center mb-auto bg-primary w-50">
+<nav class="navbar navbar-expand-lg container d-flex justify-content-center align-items-center mb-auto bg-primary w-50">
   <div>
     <a href="{% url 'home_page' %}">
       <img src="{% static 'images/logos/png/justdo-high-resolution-logo-white-on-transparent-background.png' %}" alt="logo-white" style="width: 100px; height: auto" />
@@ -19,9 +19,9 @@
       </li>
     </ul>
   </div>
-</header>
+</nav>
 {% else %}
-<header class="container d-flex justify-content-center align-items-center mb-auto">
+<nav class="navbar navbar-expand-lg container d-flex justify-content-center align-items-center mb-auto">
   <div>
     <a href="{% url 'home_page' %}">
       <img src="{% static 'images/logos/png/logo-no-background.png' %}" alt="logo-white" style="width: 100px; height: auto" />
@@ -40,5 +40,5 @@
       </li>
     </ul>
   </div>
-</header>
+</nav>
 {% endif %}
